# Gx-Rust-Nextion

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
examples/: nextion_macro.rs  nextion_with_stm32f1xx.rs
nextion-macro/: Cargo.toml
nextion-macro/src/: lib.rs
src/: lib.rs
src/components/: component_trait.rs  mod.rs  objects.rs
src/nextion/: mod.rs
