[package]
name = "nextion-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.16", features = ["extra-traits","full","fold"] }
quote = "1.0.27"
proc-macro2 = "1.0.58"
convert_case = "0.6.0"